# promocode

./: Cargo.toml  README.md
load-testing/: Cargo.toml
promocode/: Cargo.toml
promocode/src/: database.rs  extern_api.rs  lib.rs  main.rs  promocode.rs  promocode_api.rs  promocode_protocol.rs
promocode/tests/: integration_tests_add_promocode.rs  integration_tests_is_valid_promocode.rs  integration_tests_is_valid_promocode_fake_meteo_api.rs
promocode/tests/commun/: mod.rs
promocode/tests/promocode-json/: test_add_promocode_add_twice_with_same_name.json  test_add_promocode_complex.json  test_add_promocode_depth_complex.json  test_add_promocode_depth_complex_level_2.json  test_add_promocode_example_in_test.json  test_add_promocode_with_age_eq.json  test_add_promocode_with_age_eq_invalid.json  test_add_promocode_with_date_range_invalid.json  test_add_promocode_with_date_range_invalid_format.json  test_add_promocode_with_date_range_valid.json  test_add_promocode_with_empty_restriction.json  test_add_promocode_with_one_restriction_in_or.json  test_add_promocode_with_percent_0_invalid.json  test_add_promocode_with_percent_bigger_100_invalid.json  test_add_promocode_with_percent_signed_invalid.json  test_add_promocode_with_three_restriction_in_and.json  test_add_promocode_with_three_restriction_in_and_invalid.json  test_add_promocode_with_three_restriction_in_or.json  test_add_promocode_with_three_restriction_in_or_invalid.json  test_add_promocode_with_two_restriction_in_or.json  test_add_promocode_with_weather.json  test_add_promocode_with_weather_town_invalid.json  (+12 more)
(+5 files in other folders)
