[package]
name = "promocode"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
reqwest = { version = "0.12.12" }
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

